# Hemlock-Revisited

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cache-testing.yml  cmake-integration.yml  macos-testing.yml
include/: basic_concepts.hpp  cache.hpp  compat.hpp  constants.hpp  debug.hpp  decorators.h  decorators.hpp  event.hpp  pager.hpp  pager.inl  preprocessor.hpp  rand.h  rand.inl  semver.h  stdafx.h  thread_pool.hpp  thread_pool.inl  thread_workflow.hpp  thread_workflow.inl  timing.h  types.h  types.hpp  util.hpp
include/ai/pathing/: next_step_finder.hpp  pathable_agent.hpp  voxel.hpp
include/algorithm/: acs.hpp  acs.inl  graph.hpp  next_action_finder.hpp  next_action_finder.inl
include/algorithm/acs/: acs.hpp  acs.inl  graph.hpp  graph.inl  state.hpp  step.hpp
include/algorithm/debug/: debug.hpp
include/algorithm/graph/: loop_locator.hpp  loop_locator.inl
include/app/: app.h  app_base.h  screen.h  screen_base.h  single_window_app.h
include/app/process/: manager_base.h  process.h  process_base.h  threaded_manager.h
include/app/window/: manager.h  manager_base.h  state.hpp  window.h  window_base.h
include/camera/: base_camera.h  base_camera.inl  basic_first_person_camera.h  basic_orthographic_camera.h  camera_concept.hpp  state.hpp
include/debug/: heatmap.h
include/ecs/: protected_component.hpp  protected_registry.h
include/graphics/: clipping.hpp  font.h  glsl_program.h  gradient.hpp  mesh.h  pixel.h  texture.hpp  window.h  window_manager.h
include/graphics/font/: drawable.h  drawable.hpp  font.h  instance.hpp  text_align.h
include/graphics/mesh/: common_vertices_def.hpp  common_vertices_undef.hpp  gl.hpp  gl3.hpp
include/graphics/sprite/: batcher.h  sprite.h  sprite.hpp  string_drawer.h
include/graphics/window/: base.h  manager.h  state.hpp  window.h
include/io/: cache.hpp  filesystem.hpp  glob.h  image.h  io_task.hpp  iomanager.h  iomanager.hpp  iomanager.inl  ordered_iomanager.h  path.hpp  serialisation.hpp  yaml.h  yaml.hpp
include/io/fs/: glob.h
include/io/serialisation/: enum.hpp  enum_decl.hpp  struct.hpp  union.hpp
include/io/yaml/: enum_converters.hpp  glm_converters.hpp  yaml.h
include/maths/: powers.hpp  powers.inl  tweening.hpp
include/memory/: allocator.hpp  handle.hpp  handle.inl  heterogenous_pager.hpp  heterogenous_pager.inl  page.hpp  paged_allocator.hpp  paged_allocator.inl  pager.hpp  pager.inl  resource_manager.hpp  resource_manager.inl
include/memory/ring_buffer/: dynamic.hpp  dynamic.inl  fixed_capacity.hpp  fixed_capacity.inl  stack_allocated.hpp  stack_allocated.inl
include/mod/: dependency_graph.hpp  environment.h  load_order.h  manager.h  metadata.h  metadata.hpp  mod.h  registry.h  scripted_environment.inl  scripted_envrionment.hpp  scripted_mod.hpp  state.h
include/mod/load_order/: builder.h  load_order.h  state.h
include/physics/: common_components.hpp
include/physics/entity/: entity.hpp  simple_kinematic_entity.h
include/physics/voxel/: anchored_component.hpp  chunk_grid_collider.h  chunk_grid_collider.hpp  chunk_grid_collider.inl
include/script/: call_state.hpp  command_buffer.hpp  command_buffer.inl  continuable_function.hpp  environment_base.hpp  environment_base_decl.hpp  environment_registry.hpp  environment_registry.inl  rpc_manager.hpp  rpc_manager.inl  state.hpp
include/script/lua/: c_function.hpp  c_function.inl  command_buffer.hpp  command_buffer.inl  command_buffering.md  continuable_function.hpp  continuable_function.inl  environment.hpp  environment.inl  lua_function.hpp  lua_function.inl  lua_value.hpp  lua_value.inl  rpc_functions.hpp  rpc_functions.inl  state.hpp
include/thread/: basic_thread_main.hpp  resource_guard.hpp  state.hpp  task.hpp  task_queue.hpp  thread_pool.hpp  thread_pool.inl  thread_state.hpp  thread_workflow.hpp  thread_workflow.inl  thread_workflow_builder.h  thread_workflow_state.hpp
include/thread/queue/: basic.hpp  checker_task_queue.hpp  multi_queue.hpp  prioritised_multi_queue.hpp  priority_task_queue.hpp  state.h  state.hpp
include/thread/thread_pool/: basic.hpp  basic.inl  main.hpp  state.hpp  thread_pool.hpp  thread_pool.inl  timed.hpp  timed.inl
include/thread/workflow/: builder.h  state.hpp  workflow.hpp  workflow.inl
include/version/: semver.h  validate.h
include/voxel/: block.hpp  block_manager.h  chunk.h  chunk.hpp  chunk.inl  coordinate_system.h  coordinate_system.inl  face_check.hpp  generator.h  grid.h  loader.h  mesher.h  predicate.hpp  ray.h  ray.hpp  ray.inl  state.h  state.hpp  task.hpp  voxel.hpp  voxel_manager.h
src/: event.cpp  semver.cpp  timing.cpp  types.cpp
src/app/: app.cpp  app_base.cpp  screen.cpp  screen_base.cpp  single_window_app.cpp
src/camera/: basic_first_person_camera.cpp  basic_orthographic_camera.cpp
src/debug/: heatmap.cpp
src/ecs/: protected_registry.cpp
src/graphics/: font.cpp  glsl_program.cpp  mesh.cpp  pixel.cpp  window.cpp  window_manager.cpp
src/io/: glob.cpp  image.cpp  iomanager.cpp  ordered_iomanager.cpp  yaml.cpp
src/mod/: environment.cpp  load_order.cpp  manager.cpp  metadata.cpp  mod.cpp  registry.cpp  state.cpp
src/script/: command_buffer.cpp
src/thread/: thread_workflow_builder.cpp
src/version/: semver.cpp  validate.cpp
src/voxel/: block_manager.cpp  chunk.cpp  coordinate_system.cpp  generator.cpp  grid.cpp  loader.cpp  mesher.cpp  ray.cpp  state.cpp  voxel_manager.cpp
tests/: app.hpp  iomanager.hpp  main.cpp  test_entry_screen.hpp  test_mod_screen.hpp  test_render_screen.hpp  test_script_screen.hpp  test_voxel_screen.hpp  test_yaml_screen.hpp
tests/ai_screen/: ai_screen.hpp  basic_graph.hpp  dimension.hpp  maze2d.hpp  maze2d.inl  maze_graph.hpp
tests/navmesh_screen/: chunk.hpp  io.hpp  navmesh_screen.hpp
tests/performance_screen/: chunk.hpp  performance_screen.hpp  terrain.hpp
tests/shaders/: default_sprite.frag  default_sprite.vert  test_vox.frag  test_vox.vert
tests/voxel_screen/: chunk.hpp  io.hpp  physics.hpp  player.hpp  terrain.hpp  voxel_screen.hpp
(+210 files in other folders)
